<resources>
    <string name="app_name">SqliteEjercicios</string>
    <string name="nombre">Nombre:</string>
    <string name="codigo">Codigo:</string>
    <string name="titulo">Titulo:</string>
    <string name="autor">Autor:</string>
    <string name="insertar">Insertar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
</resources>
