<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.sqliteejercicios.EjercicioLibros"
    android:id="@+id/layoutprincipal">

    <TextView
        android:id="@+id/txtcodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtcodigo"/>
    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtcodigo"/>
    <EditText
        android:id="@+id/edTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txttitulo"
        android:layout_below="@+id/edCodigo"/>
    <TextView
        android:id="@+id/txtAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txttitulo"/>
    <EditText
        android:id="@+id/edAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtAutor"
        android:layout_below="@+id/edTitulo"/>

    <Button
        android:id="@+id/butInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertar"
        android:layout_below="@+id/edAutor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/butActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/butInsertar"
        android:layout_below="@+id/edAutor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/actualizar"
        />

    <Button
        android:id="@+id/butConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        android:layout_toLeftOf="@+id/butInsertar"
        android:layout_below="@id/edAutor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />
    <Button
        android:id="@+id/butEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butInsertar"
        android:layout_toRightOf="@+id/butConsultar"
        android:text="@string/eliminar"
        />
    <TextView
        android:id="@+id/consultaLibros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butEliminar"/>

</RelativeLayout>